--- a/src/scss/components/_hands.scss
+++ b/src/scss/components/_hands.scss
@@ -2,3 +2,9 @@
     background-image: url(/assets/images/hands/banner.png);
     padding-bottom: 125px;
 }
+
+.hands {
+    .image__large {
+        background-image: url(/assets/images/hands/hands.png)
+    }
+}
