--- a/src/scss/components/_tight.scss
+++ b/src/scss/components/_tight.scss
@@ -2,3 +2,9 @@
     background-image: url(/assets/images/tight/banner.png);
     padding-bottom: 125px;
 }
+
+.tight {
+    .image__large {
+        background-image: url(/assets/images/tight/tight.png);
+    }
+}
