--- a/src/scss/components/_homepage.scss
+++ b/src/scss/components/_homepage.scss
@@ -178,14 +178,11 @@
     position: relative;
     z-index: 100;
     transition: all 3s ease;
-    filter: brightness(0.7);
-    // transform-style: preserve-3d;
-    // transform: perspective(1000px) rotateY(0deg) rotateX(0deg);
+
+    @extend .hover__zoom;
+    @extend .hover__brightness;
 
     &:hover {
-      // transform: perspective(1000px) rotateY(5deg) rotateX(5deg);
-      filter: brightness(1);
-      transform: scale(1.3);
       transition: all 3s ease;
     }
 
@@ -202,10 +199,37 @@
 
 .categories__image {
   overflow: hidden;
+  width: 100%;
+}
+
+.categories__image-design__two, 
+.categories__image-design__three {
+  overflow: inherit; 
+  width: 100%;
+  position: relative;
+
+  &::after {
+    position: absolute;
+    content: '';
+    width: 80%;
+    height: 300px;
+    background: url(/assets/images/dot_one.png);
+    left: 0;
+    bottom: -40px;
+  }
+
+  img {
+    width: 80%;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
 }
 
 .categories__inner {
   position: relative;
+  overflow-x: hidden;
 
   h2 {
     position: relative;
@@ -217,18 +241,18 @@
       margin-bottom: 15px;
     }
 
-    &::before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 60px;
-      background: url(/assets/images/blob.svg) no-repeat;
-      z-index: -1;
-      top: 0px;
-      left: -10px;
-      opacity: 0.5;
-      animation: glow 10s infinite alternate;
-    }
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 60px;
+    //   background: url(/assets/images/blob.svg) no-repeat;
+    //   z-index: -1;
+    //   top: 0px;
+    //   left: -10px;
+    //   opacity: 0.5;
+    //   animation: glow 10s infinite alternate;
+    // }
   }
 
   p {
@@ -249,13 +273,27 @@
 }
 
 .animation__one {
-  position: fixed;
-  // right: -40px;
-  left: 0;
-  top: -55%;
-  width: 30px;
-  height: 30px;
+  position: absolute;
+  right: 50%;
+  width: 20px;
+  height: 20px;
+  top: 15px;
   background-color: #fcd8cf;
+  transform: rotate(55deg);
+  z-index: -1;
+}
+
+.rotation {
+  animation: rotate 10s linear infinite alternate-reverse;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateZ(0deg) translateX(30px);
+  }
+  100% {
+    transform: rotateZ(360deg) translateX(30px);
+  }
 }
 
 @keyframes glow {
@@ -338,15 +376,13 @@
   li {
     position: absolute;
     list-style: none;
-    display: block;
-    width: 40px;
-    height: 40px;
-    background-color: $vistaWhite;
+    display: block;    
+    width: 10px;
+    height: 10px;
+    background-color: $wheat;
     bottom: -160px;
-
     -webkit-animation: square 25s infinite;
     animation: square 15s infinite;
-
     -webkit-transition-timing-function: linear;
     transition-timing-function: linear;
 
@@ -356,10 +392,8 @@
 
     &:nth-child(2) {
       left: 20%;
-
-      width: 80px;
-      height: 80px;
-
+      width: 4px;
+      height: 4px;
       animation-delay: 2s;
       animation-duration: 17s;
     }
@@ -371,11 +405,10 @@
 
     &:nth-child(4) {
       left: 40%;
-      width: 60px;
-      height: 60px;
-
+      width: 15px;
+      height: 15px;
       animation-duration: 22s;
-      background-color: $vistaWhite;
+      background-color: $wheat;
     }
 
     &:nth-child(5) {
@@ -384,17 +417,16 @@
 
     &:nth-child(6) {
       left: 80%;
-      width: 120px;
-      height: 120px;
-
+      width: 12px;
+      height: 12px;
       animation-delay: 3s;
-      background-color: $vistaWhite;
+      background-color: $wheat;
     }
 
     &:nth-child(7) {
       left: 32%;
-      width: 160px;
-      height: 160px;
+      width: 10px;
+      height: 10px;
 
       animation-delay: 7s;
     }
@@ -415,14 +447,14 @@
 
       animation-delay: 2s;
       animation-duration: 40s;
-      background-color: $vistaWhite;
+      background-color: $wheat;
       z-index: -10;
     }
 
     &:nth-child(10) {
       left: 90%;
-      width: 160px;
-      height: 160px;
+      width: 50px;
+      height: 50px;
 
       animation-delay: 11s;
     }
@@ -471,7 +503,7 @@
     width: 70px;
     height: 70px;
 
-    @media only screen and (max-width: $sm) {
+    @media only screen and (max-width: $lg) {
       width: 40px;
       height: 40px;
     }
@@ -499,8 +531,8 @@
       #0c3046 100%
     );
 
-    @media only screen and (max-width: $md) {
-      padding: 50px 35px;
+    @media only screen and (max-width: $lg) {
+      padding: 50px;
     }
 
     &__col {
@@ -523,6 +555,10 @@
       button {
         background-color: transparent;
         border-color: $elephant;
+
+        &:first-child {
+          margin-right: -2px;
+        }
       }
     }
   }
@@ -534,6 +570,12 @@
       padding-bottom: 33px;
       opacity: 0.7;
       color: white;
+
+      @media only screen and (max-width: $md) {
+        font-size: 16px;
+        line-height: 150%;
+        margin-bottom: 0;
+      }
     }
 
     .author-designation {
@@ -541,6 +583,11 @@
       line-height: 42px;
       opacity: 0.4;
       color: white;
+
+      @media only screen and (max-width: $md) {
+        font-size: 22px;
+        line-height: 30px;
+      }
     }
 
     .author-name {
@@ -548,6 +595,11 @@
       line-height: 32px;
       text-transform: uppercase;
       color: white;
+
+      @media only screen and (max-width: $md) {
+        font-size: 22px;
+        line-height: 30px;
+      }
     }
 
     span {
@@ -567,10 +619,20 @@
       }
 
       @media only screen and (max-width: $lg) {
-        width: 100%;
-        position: relative !important;
+        width: 125px;
         left: 0;
         margin-top: 30px;
+        right: 0;
+        left: auto;
+        bottom: 0;
+      }
+
+      @media only screen and (max-width: $md) {
+        position: relative;
+      }
+
+      @media only screen and (max-width: xs) {
+        width: 100%;
       }
     }
   }
