--- a/src/scss/components/_maleBreast.scss
+++ b/src/scss/components/_maleBreast.scss
@@ -2,3 +2,9 @@
     background-image: url(/assets/images/maleBreast/banner.png);
     padding-bottom: 125px;
 }
+
+.male-breast {
+    .image__large {
+        background-image: url(/assets/images/maleBreast/maleBreast.png)
+    }
+}
