--- a/src/scss/components/_skin.scss
+++ b/src/scss/components/_skin.scss
@@ -2,3 +2,9 @@
     background-image: url(/assets/images/skin/banner.jpeg);
     padding-bottom: 125px;
 }
+
+.skin {
+    .image__large {
+        background-image: url(/assets/images/skin/skin.png)
+    }
+}
