--- a/src/scss/components/_skincare.scss
+++ b/src/scss/components/_skincare.scss
@@ -96,6 +96,7 @@
             opacity: 0.1;
             font-size: 55px;
             left: -20px;
+            animation: scale 2s linear 2s infinite alternate;
 
             @media only screen and (max-width: $sm) {
                 font-size: 30px;
@@ -110,6 +111,15 @@
 
     span {
         font-size: 16px;
+    }
+}
+
+@keyframes scale {
+    0% {
+        transform: scale(0.8)
+    }
+    100% {
+        transform: scale(1)
     }
 }
 
@@ -226,5 +236,20 @@
 .accordion-item:last-of-type {
     .accordion-button.collapsed {
         margin-bottom: 0px;
+    }
+}
+
+.image__large {
+    width: 100%;
+    height: 880px;
+    background-size: 50%;
+    background-attachment: fixed;
+    box-shadow: inset 0px 0px 0px 19px #fff;
+    border: 1px solid $wheat;
+
+    @media only screen and (max-width: $sm) {
+        height: 500px;
+        background-position: top left;
+        background-size: 100%;
     }
 }
