--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -28,12 +28,41 @@
         }
     }
 
+    .team-img {
+        position: relative;
+
+        &::after {
+            position: absolute;
+            content: '';
+            width: 65%;
+            height: 65%;
+            background: url(/assets/images/dot_one.png);
+            bottom: -40px;
+            z-index: 0;
+            left: 25%;
+
+            @media screen and (max-width: $md) {
+                bottom: 0;
+                left: 20%;
+            }
+        }
+    }
+
     img {
         width: 379px;
         height: 379px;
+        transition: all 1s ease;
         padding: 19px;
         background-color: white;
         border: 2px solid $wheat;
+        position: relative;
+        z-index: 999;
+
+        @extend .hover__tilt;
+
+        &:hover {
+            transition: all 1s ease;
+        }
 
         @media only screen and (max-width: $xl) {
             width: 80%;
@@ -79,11 +108,6 @@
     }
 
     p {
-        font-family: TTNorms;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 20px;
-        line-height: 30px;
         margin-bottom: 0;
     }
 }
@@ -93,5 +117,21 @@
 
     @media only screen and (max-width: $sm) {
         margin-top: 80px;
+    }
+}
+
+.team-animation__two {
+    animation: move 5s infinite alternate !important;
+}
+
+@keyframes move {
+    0% {
+        transform: translateY(0)
+    }
+    50% {
+        transform: translateY(30px) translateX(25px)
+    }
+    100% {
+        transform: translateY(0)
     }
 }
